// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IMP Reducer IMP_CLOSE_UPLOAD_MODAL sets modal visibility and loading to false 1`] = `
Object {
  "data": Array [
    Object {
      "id": 1,
      "status": "applied",
    },
    Object {
      "id": 2,
      "status": "failed",
    },
  ],
  "impUploadModalLoading": false,
  "impUploadModalVisible": false,
  "nextPageToken": undefined,
}
`;

exports[`IMP Reducer IMP_OPEN_UPLOAD_MODAL sets modal visibility to true 1`] = `
Object {
  "data": Array [
    Object {
      "id": 1,
      "status": "applied",
    },
    Object {
      "id": 2,
      "status": "failed",
    },
  ],
  "impUploadModalLoading": false,
  "impUploadModalVisible": true,
  "nextPageToken": undefined,
}
`;

exports[`IMP Reducer IMP_UPLOAD sets modal loading to true 1`] = `
Object {
  "data": Array [
    Object {
      "id": 1,
      "status": "applied",
    },
    Object {
      "id": 2,
      "status": "failed",
    },
  ],
  "impUploadModalLoading": true,
  "impUploadModalVisible": false,
  "nextPageToken": undefined,
}
`;

exports[`IMP Reducer IMP_UPLOAD_SUCCESS sets modal visibility and loading to false 1`] = `
Object {
  "data": Array [
    Object {
      "id": 1,
      "status": "applied",
    },
    Object {
      "id": 2,
      "status": "failed",
    },
  ],
  "impUploadModalLoading": false,
  "impUploadModalVisible": false,
  "nextPageToken": undefined,
}
`;

exports[`IMP Reducer IMPS_FETCH_SUCCESS combines both entry lists when \`append\` is true, and update list metadata 1`] = `
Object {
  "data": Array [
    Object {
      "id": 1,
      "status": "applied",
    },
    Object {
      "id": 2,
      "status": "failed",
    },
    Object {
      "id": 300,
      "status": "failed",
    },
    Object {
      "id": 400,
      "status": "applied",
    },
  ],
  "impUploadModalLoading": false,
  "impUploadModalVisible": false,
  "nextPageToken": "YYZ",
  "q": undefined,
}
`;

exports[`IMP Reducer IMPS_FETCH_SUCCESS replaces the entries with new ones when \`append\` is false, and update list metadata 1`] = `
Object {
  "data": Array [
    Object {
      "id": 300,
      "status": "failed",
    },
    Object {
      "id": 400,
      "status": "applied",
    },
  ],
  "impUploadModalLoading": false,
  "impUploadModalVisible": false,
  "nextPageToken": "YYZ",
  "q": undefined,
}
`;

exports[`IMP Reducer returns default state 1`] = `
Object {
  "data": Array [],
  "impUploadModalLoading": false,
  "impUploadModalVisible": false,
  "nextPageToken": undefined,
}
`;
